<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".branches.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/computer_engineering"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester_5"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/_3350701"
                            android:textAppearance="?attr/textAppearanceLabelLarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutCMT3350701"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorEnabled="true">

                            <AutoCompleteTextView
                                android:id="@+id/CMT3350701"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/select"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/_3350702"
                            android:textAppearance="?attr/textAppearanceLabelLarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutDWPD3350702"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorEnabled="true">

                            <AutoCompleteTextView
                                android:id="@+id/DWPD3350702"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/select"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/_3350703"
                            android:textAppearance="?attr/textAppearanceLabelLarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutJAVA3350703"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorEnabled="true">

                            <AutoCompleteTextView
                                android:id="@+id/JAVA3350703"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/select"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/_3350704"
                            android:textAppearance="?attr/textAppearanceLabelLarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutELECTIVE1"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorEnabled="true">

                            <AutoCompleteTextView
                                android:id="@+id/ELECTIVE1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/select"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/semester6"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/_3360701_ajp"
                            android:textAppearance="?attr/textAppearanceLabelLarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutAJP3360701"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorEnabled="true">

                            <AutoCompleteTextView
                                android:id="@+id/AJP3360701"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/select"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/elective_2"
                            android:textAppearance="?attr/textAppearanceLabelLarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutELECTIVE2"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorEnabled="true">

                            <AutoCompleteTextView
                                android:id="@+id/ELECTIVE2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/select"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="ELECTIVE - 3"
                            android:textAppearance="?attr/textAppearanceLabelLarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutELECTIVE3"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorEnabled="true">

                            <AutoCompleteTextView
                                android:id="@+id/ELECTIVE3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/select"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/CLEAR"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:text="CLEAR"
                    app:icon="@drawable/trash_24" />

                <Button
                    android:id="@+id/CALCULATE"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:text="CALCULATE"
                    app:icon="@drawable/equal" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bannerAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>